--- a/dev/dx/Makefile
+++ b/dev/dx/Makefile
@@ -3,16 +3,24 @@ CC=gcc
 # executable name
 OUT=dx
 # non-standard include paths
-INC= -I../
+#INC= -I../
+INC = -I/../include
+
+MAKEFLAGS = -k
 # compiler flags
-CFLAGS= -g -std=c99 -Wall -c
+CFLAGS= -g -std=c99 -Wall -c \
+		-O2 -Wno-parentheses \
+		-fno-strict-aliasing \
+	    -DSO_RXQ_OVFL=40 \
+	    -DPF_CAN=29 \
+	    -DAF_CAN=PF_CAN
 # libraries
-LIBS= -lrt -pthread
+LIBS= -lrt -pthread 
 # object file directory
 OBJDIR=obj
 # object files
 OBJS= $(addprefix $(OBJDIR)/, \
-	dxtask.o)
+	dxtask.o dxcan.o lib.o )
 
 
 all: directories $(OUT)
