sandbox Makefile updated to enable usage of libxml2

--- a/dev/sandbox/Makefile
+++ b/dev/sandbox/Makefile
@@ -1,8 +1,8 @@
 CC=gcc
 OUT=app
-INC=
+INC= -I/usr/include/libxml2
 CFLAGS= -g -std=c99 -Wall -c
-LIBS= -lrt
+LIBS= -lrt -L/usr/lib/x86_64 -lxml2
 OBJS = main.o
 
 all: $(OUT)
